# PICo24_Demos

./: CMakeLists.txt  Lua_Hello.c  MSD_16x.c  README.md  RetroWave_USB.c
CMake/: FindXC16.cmake
